# Elsa_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yaml
apis/: chat.py  metis.py
bot/: keyboard.py
config/: config.py  redis_conf.py
docker/: Dockerfile
requirements/: base.txt
utils/: enum.py
