[project]
requires-python = ">=3.10"


[tool.ruff]
select = [
    "E", # Pycodestyle errors (e.g., syntax errors)
    "F", # Pyflakes (e.g., unused variables)
    "I", # isort (import sorting)
    "W", # Pycodestyle warnings
    "UP", # Pyupgrade (modern Python features)
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 200

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"


[tool.ruff.isort]
known-first-party = ["src"]
